# fast-api-zero

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
fast_api_zero/: app.py  database.py  schemas.py  security.py
fast_api_zero/routes/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 8e8a9abde796_create_todos_table.py  ac361b7079ff_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
