[tool.poetry]
name = "fast-api-zero"
version = "0.1.0"
description = ""
authors = ["Kaio Rocha <kaiodtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.3.4"
isort = "^5.13.2"
httpx = "^0.26.0"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.blue]
extend-exclude = '(migrations/)'

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff check . && blue --check --diff --color . && isort --check --diff --color ."
format = "blue . && isort ."
run = "uvicorn fast_api_zero.app:app --reload"
pre_test = "task lint"
test = "pytest -s -x -vv --cov=fast_api_zero"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
